# stremlit_template_generation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/routes/: health.py
app/core/: __init__.py
app/core/models/: __init__.py  base.py
app/database/: connection.py
docs/: development.md
frontend/: __init__.py  config.py  main.py
frontend/components/: __init__.py  header.py  sidebar.py
frontend/pages/: 1_📊_Dashboard.py
frontend/services/: __init__.py  api_client.py
scripts/: generate_workflow.py  setup_db.py  start_dev.py
tests/: conftest.py
tests/test_api/: test_health.py
